2008-04-21  Peter Bloomfield

	* libbalsa/misc.h: if !USE_REGEX is enough.

2008-04-21  Peter Bloomfield

	* configure.in: implement --enable-gregex (default=no); change
	default for --enable-pcre to no.
	* libbalsa/filter-funcs.c: (libbalsa_condition_regex_free):
	condition on USE_REGEX.
	* libbalsa/filter-private.h: ditto.
	* libbalsa/mime.c: (mark_urls, libbalsa_insert_with_url,
	libbalsa_unwrap_selection): ditto.
	* libbalsa/misc.h: ditto.
	* src/balsa-app.c: ditto.
	* src/balsa-app.h: ditto.
	* src/balsa-mime-widget-text.c: (balsa_mime_widget_new_text):
	ditto.
	* src/balsa-print-object-text.c:
	(balsa_print_object_text_plain): ditto.
	* src/print.c: (print_wrap_body): ditto.
	* src/quote-color.c: (is_a_quote): ditto.
	* src/quote-color.h: ditto.
	* src/sendmsg-window.c: (reflow_selected_cb): ditto.
	* src/spell-check.c: (balsa_spell_check_start,
	balsa_spell_check_destroy, next_word): ditto.

2008-04-19  Peter Bloomfield

	* libbalsa/message.c: (lbmsg_set_header): scrap remaining
	warnings.

2008-04-12  Peter Bloomfield

	* libbalsa/mailbox_maildir.c: (lbm_maildir_parse_subdirs,
	libbalsa_mailbox_maildir_sync): make sure the tree is saved
	after reparsing subdirs.

2008-04-09  Pawel Salek

	* src/sendmsg-window.c: make postpone button and menu entry work.
	* libbalsa/message.c: do not complain when setting headers->from again.
	* libbalsa/imap/imap-handle.[ch]: make set_timeout() return the
	old value.
	* libbalsa/imap/imap_private.h: add HANDLE_TRYLOCK macro.
	* libbalsa/imap/imap-commands.c: use it for noop().

2008-04-06  Pawel Salek

	* libbalsa/imap/imap-handle.h: fix that macro.

2008-04-06  Pawel Salek

	* libbalsa/mailbox_imap.c: initalise ImapSequence data.
	* libbalsa/imap/imap-handle.h: provide a macro for that purpose.

2008-04-03  Pawel Salek

	* libbalsa/mailbox_imap.c: don't print warnings on copy when
	UIDPLUS is unavailable. Better code reuse.
	* libbalsa/message.c: don't modify invariants.
