@@ -1,4 +1,24 @@
-extra_appicons_IMGS = $(wildcard balsa-*.png)
+extra_appicons_IMGS = \
+	balsa-drop-down.png	\
+	balsa-encrypted.png	\
+	balsa-mark-all.png	\
+	balsa-mbox-draft.png	\
+	balsa-mbox-sent.png	\
+	balsa-mbox-tray-empty.png	\
+	balsa-mbox-tray-full.png	\
+	balsa-next-flagged.png	\
+	balsa-next-part.png	\
+	balsa-next.png	\
+	balsa-next-unread.png	\
+	balsa-postpone.png	\
+	balsa-previous-part.png	\
+	balsa-previous.png	\
+	balsa-reply-all.png	\
+	balsa-signature-bad.png	\
+	balsa-signature-good.png	\
+	balsa-signature-notrust.png	\
+	balsa-signature-unknown.png
+
 
 EXTRA_DIST = $(extra_appicons_IMGS)
 
