@@ -1,4 +1,16 @@
-extramimetypes_IMGS = $(wildcard gnome-mime-*.png)
+extramimetypes_IMGS = \
+	gnome-mime-application-pgp-signature.png	\
+	gnome-mime-application-pkcs7-mime.png	\
+	gnome-mime-application-pkcs7-signature.png	\
+	gnome-mime-application-x-pkcs7-signature.png	\
+	gnome-mime-message-disposition-notification.png	\
+	gnome-mime-message-external-body.png	\
+	gnome-mime-message.png	\
+	gnome-mime-multipart-alternative.png	\
+	gnome-mime-multipart-encrypted.png	\
+	gnome-mime-multipart.png	\
+	gnome-mime-multipart-signed.png
+
 
 EXTRA_DIST = $(extramimetypes_IMGS)
 
