@@ -55,7 +55,6 @@ extern "C" {
 #endif
         GtkWidget *name;
         GtkWidget *email;
-        GtkWidget *account_name;
 #if !defined(ENABLE_TOUCH_UI)
         GtkWidget *localmaildir;
 #endif /* ENABLE_TOUCH_UI */
